<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Chat App</string>
    <string name="Chats">Chats</string>
    <string name="Groups">Groups</string>
    <string name="Contacts">Contacts</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="forgetpassword">Forget Password ?</string>
    <string name="login">Login</string>
    <string name="neednewAccount">Need New Account ?</string>
    <string name="OrLoginUsingYour">Or Login Using Your</string>
    <string name="Phone">Phone</string>
    <string name="CreateAccount">Create Account</string>
    <string name="AlreadyHaveAnAccount">Already Have An Account ?</string>
    <string name="EmailisEmpty">Email is Empty</string>
    <string name="passwordisEmpty">Password is Empty</string>
    <string name="CreatingNewAccount">Creating New Account</string>
    <string name="AccountCreatedSuccessfully">Account Created Successfully...</string>
    <string name="ThePasswordShouldBe">The Password Should Be Of Atleast 6 Characters</string>
    <string name="PleaseWaitCreatingNewAccount">Please Wait , While We Are Creating New Account For You...</string>
    <string name="TheEmailAddressIsAlreadyInUse">The Email Address Is Already In Use By Another Account</string>
    <string name="pleaseWait">Please Wait...</string>
    <string name="loggedinSuccessful">Logged in Successful...</string>
    <string name="find_friends">Find Friends</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="EmailOrPasswordError">Email or password error Please verify that the data is correct</string>
    <string name="setusername">Username</string>
    <string name="heyiamavailablenow">Hey , I am available now ...</string>
    <string name="update">Update</string>
    <string name="usernameisEmpty">Username is Empty</string>
    <string name="statusisEmpty">Status is Empty</string>
    <string name="ProfileUpdatedSuccessfully">Profile Updated Successfully...</string>
    <string name="ProfileNotUpdate">Profile Not Update</string>
    <string name="Welcome">Welcome</string>
    <string name="Pleasesetupdateuserinfo">Please set and update user information </string>
    <string name="createGroup">Create Group</string>
    <string name="EnterGroupName">Enter Group Name</string>
    <string name="pleaseWritegroupname">Please write group name</string>
    <string name="groupiscreated">group is created sucessfully</string>
    <string name="Create">Create</string>
    <string name="Cancel">Cancel</string>
    <string name="Writemessage">  Write a Message</string>
    <string name="Enteryourmobilenumber">Enter your mobile number</string>
    <string name="Continue">Continue</string>
    <string name="MayIaskyourphone">May I ask your phone number ?</string>
    <string name="WaitforthecodeIsent">Wait for the code I sent You</string>
    <string name="Enterverificationcode">Enter verification code</string>
    <string name="EnteravalidPhone">Enter a valid Phone Number</string>
    <string name="Somethingiswrong">Something is wrong, we will fix it soon...</string>
    <string name="Invalidcodeentered">Invalid code entered...</string>
    <string name="codehasbeensent">Verification Code has been sent</string>
    <string name="PhoneNumberVerification">Phone Number Verification</string>
    <string name="VerificationCode">Verification Code</string>
    <string name="pleasewaitwewillverifying">please wait ,we will verifying  Verification code</string>
    <string name="ImageProfileUpdatedSuccessfully">Profile Image Updated Successfully</string>
    <string name="ImageProfileNotUpdate">Failed to update profile image</string>
    <string name="setProfileImage">Set Profile Image</string>
    <string name="ResendCode">Resend Code</string>
    <string name="ResendCodein">Resend Code in 00:</string>
    <string name="Iamhavingtrouble">Iam having trouble</string>
    <string name="sendMessage">Send Message</string>
    <string name="sendChatRequest">Send Chat Request</string>
    <string name="Me">Me</string>

    <string name="declineChatRequest">Decline Chat Request</string>
    <string name="cancelChatRequest">Cancel Chat Request</string>
    <string name="AcceptChatRequest">Accept Chat Request</string>
    <string name="Deletethecontact">Delete the Contact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ChatRequests">Chat Requests</string>
    <string name="Confirm">Confirm</string>
    <string name="LastSeen">Last Seen </string>
    <string name="Youhavesentarequestto">You have sent a request to : </string>
    <string name="cancelRequest">Cancel</string>
    <string name="Search">Search</string>
    <string name="OnlineNow">Online Now</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="BycheckingReset">By checking Reset password, \n
       you will receive an email to reset your password</string>
    <string name="pleaseCheckYourEmail">Please Check Your E-mail</string>
    <string name="offLine">Offline</string>
    <string name="Editphonenumber">Edit Phone Number</string>
    <string name="ResendTo">Resend to</string>
    <string name="Howdoyouwanttoreceive">How do you want to receive the code ?</string>
    <string name="Thisemailiswrong">This E-mail is wrong</string>

</resources>
