<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PhoneLoginActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.PhoneLoginActivity">


    <TextView
        android:id="@+id/textphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10sp"
        android:textAlignment="center"
        android:textSize="22dp"
        android:text="@string/MayIaskyourphone"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimary"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textphone"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="34dp"
        android:gravity="start"
        android:text="+20"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        tools:ignore="RtlCompat" />


    <EditText
        android:id="@+id/editTextphoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textphone"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/inputs"
         android:drawableStart="@drawable/phonenumber"
        android:drawablePadding="45dp"
        android:hint="@string/Enteryourmobilenumber"
        android:inputType="phone"
        android:maxLength="11"
        android:padding="4dp"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/Continue_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextphoneNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:text="@string/Continue"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFF"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textVerification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:textAlignment="center"
        android:layout_marginStart="10sp"
        android:text="@string/WaitforthecodeIsent"
android:textSize="22dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimary"
        android:visibility="invisible"
        tools:ignore="RtlCompat" />


    <EditText
        android:id="@+id/editTextCode"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textVerification"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:background="@drawable/inputs"
         android:drawableStart="@drawable/phonevirfy"
        android:drawablePadding="10dp"
        android:hint="@string/Enterverificationcode"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="4dp"
        android:visibility="invisible"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/buttonLoginPhone"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextCode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/textcount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLoginPhone"
        android:layout_marginStart="10sp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:text="@string/ResendCodein"
        android:textAlignment="textStart"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimary"
        android:visibility="invisible"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textEditPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textcount"
        android:layout_marginStart="10sp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:gravity="start"
        android:text="@string/Editphonenumber"
        android:textAlignment="textStart"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:visibility="invisible"
        tools:ignore="RtlCompat" />


</RelativeLayout>
