<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        tools:ignore="RtlCompat">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">

            <ImageView
                android:id="@+id/login_photo"
                android:layout_width="wrap_content"
                android:layout_height="250dp"

                android:scaleType="centerCrop"
                android:src="@drawable/login_photo"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_photo"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:hint="@string/email"

                android:inputType="textEmailAddress"
                android:padding="4dp"
                tools:ignore="RtlCompat" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_email"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="17dp"
                android:background="@drawable/inputs"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="4dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/forget_password_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_password"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="19dp"
                android:gravity="end|center_horizontal"
                android:text="@string/forgetpassword"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forget_password_link"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="19dp"
                android:background="@drawable/button"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/need_newAccount_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="19dp"
                android:gravity="center_horizontal"
                android:text="@string/neednewAccount"
                android:textColor="@color/colorPrimary"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/using_login_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/need_newAccount_link"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="19dp"
                android:gravity="center_horizontal"
                android:text="@string/OrLoginUsingYour"
                android:textSize="17dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login_Phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/using_login_link"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="19dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button"
                android:drawableStart="@drawable/phone"
                android:text="@string/Phone"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>