<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10sp"
    android:id="@+id/sheet_dialog"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="10sp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/sheetDialogNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:textSize="17dp"
        android:gravity="start"
        android:text="@string/ResendTo"
        android:textAlignment="textStart"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimary"
        tools:ignore="RtlCompat" />
    <TextView
        android:id="@+id/textEditPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textcount"
        android:layout_marginStart="12sp"
        android:layout_marginTop="5dp"
        android:textSize="10sp"
         android:layout_marginEnd="10dp"
        android:gravity="start"
        android:visibility="visible"
        android:text="@string/Howdoyouwanttoreceive"
        android:textAlignment="textStart"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="#635E5E"
        tools:ignore="RtlCompat" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:id="@+id/sheet_resend_btn"
            android:layout_below="@id/textEditPhoneNumber"
            android:layout_centerHorizontal="true"
             android:background="@drawable/inputs"
            android:text="@string/ResendCode"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="10sp"
            android:id="@+id/sheet_cancel"
            android:layout_below="@id/textEditPhoneNumber"
            android:layout_centerHorizontal="true"
             android:background="@drawable/button"
            android:text="@string/Cancel"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFF"
            tools:ignore="RtlCompat" />
    </LinearLayout>

</android.support.v7.widget.CardView>