<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/reset_RelativeLayout"
    tools:context="com.example.mohamedabdelazizhamad.whatsapp.Activities.ResetPasswordActivity">
<include
    layout="@layout/app_bar_layout"
    android:id="@+id/reset_bar">

</include>

    <EditText
        android:id="@+id/reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="17dp"
         android:layout_marginRight="17dp"
        android:background="@drawable/inputs"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        tools:ignore="RtlCompat" />
    <Button
        android:id="@+id/Reset_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reset_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button"
        android:text="@string/ResetPassword"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="20dp"
        tools:ignore="RtlCompat" />
    <TextView
        android:id="@+id/resettextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_below="@id/Reset_btn"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/BycheckingReset"
        android:textColor="@color/common_google_signin_btn_text_light"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />
</RelativeLayout>